objects/IP_Config_Feature__c.object
<CustomObject>
    <fields>
        <fullName>Addendum__c</fullName>
        <label>Addendum</label>
        <referenceTo>IP_Config__c</referenceTo>
        <relationshipLabel>IP Config Features</relationshipLabel>
        <relationshipName>IP_Config_Features</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specification__c</fullName>
        <label>Specification</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <label>IP Config Feature</label>
    <nameField>
        <label>IP Config Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IP Config Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>